Additional work on blog extension
Revamped some of the html elements to mirror the PHP file.  Made
changes to the blog extension example to utilize new html elements js
file.  Provided method to order js and css inclusion to force them to
order by site files, theme files, and finally extensions files.

--- a/assets/extensions/blog/css/blog.css
+++ b/assets/extensions/blog/css/blog.css
@@ -41,25 +41,19 @@ input.simple_blog_text_entry
     min-height: 8em;
 }
 
-.editor
+div#blog_comment_editor,
+div#blog_entry_editor
 {
-    margin: 10px;
+    background: white;
+    min-height: 200px;
+}
+div#blog_comment_editor_toolbar,
+div#blog_entry_editor_toolbar
+{
+    background: white:
 }
 
-div#simple_blog_create_dialog_titlediv,
-div#simple_blog_create_dialog_summarydiv,
-div#simple_blog_edit_dialog_titlediv,
-div#simple_blog_edit_dialog_summarydiv
+.blog_toolbar
 {
-    width: 100%;
-}
-
-input#simple_blog_create_dialog_title,
-input#simple_blog_create_dialog_summary,
-input#simple_blog_edit_dialog_title,
-input#simple_blog_edit_dialog_summary
-{
-    display: block;
-    width: 100%;
-    margin-left: 5px;
+    float: right;
 }
